config/4.容器云平台/cloud-native-log/elasticsearch.yaml
---
# https://portworx.com/run-ha-elasticsearch-elk-rancher-kubernetes-engine/
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-api
  namespace: kube-system
  labels:
    name: elasticsearch
spec:
  selector:
    app: es
  ports:
  - name: transport
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  namespace: kube-system
  labels:
    name: elasticsearch
spec:
  selector:
    app: es
  ports:
  - name: transport
    port: 9300
    protocol: TCP
  clusterIP: None

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: kube-system
  labels:
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 3
  serviceName: "elasticsearch-discovery"
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
    spec:
      serviceAccountName: admin
      containers:
      - name: elasticsearch
        image: registry.cn-beijing.aliyuncs.com/alexzhang/elasticsearch:6.5.0
        ports:
        - containerPort: 9200
          protocol: TCP
        - containerPort: 9300
          protocol: TCP
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        resources:
          limits:
            memory: 2000Mi
          requests:
            cpu: 100m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 9300
          initialDelaySeconds: 100
          periodSeconds: 10
        volumeMounts:
        - name: esdata
          mountPath: /data
      terminationGracePeriodSeconds: 30
      volumes:
      - name: esdata
        hostPath:
          path: /esdata
